# Kirana

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt
kirana/: .clang-format  CMakeLists.txt  app.cpp  app.hpp  app_bindings.cpp  constants.h  main.cpp  main.h
kirana/camera/: CMakeLists.txt  camera.cpp  camera.hpp  orthographic_camera.cpp  orthographic_camera.hpp  perspective_camera.cpp  perspective_camera.hpp
kirana/math/: CMakeLists.txt  bounds2.cpp  bounds2.hpp  bounds3.cpp  bounds3.hpp  math_test.cpp  math_utils.hpp  matrix4x4.cpp  matrix4x4.hpp  quaternion.cpp  quaternion.hpp  ray.hpp  transform.cpp  transform.hpp  transform_hierarchy.cpp  transform_hierarchy.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
kirana/new_scene/: CMakeLists.txt  camera.cpp  camera.hpp  camera_types.hpp  image.cpp  image.hpp  image_manager.cpp  image_manager.hpp  image_types.hpp  light.hpp  material.hpp  material_properties.hpp  material_types.hpp  mesh.cpp  mesh.hpp  object.hpp  scene.cpp  scene.hpp  scene_editor.cpp  scene_editor.hpp  scene_graph.hpp  scene_manager.cpp  scene_manager.hpp  scene_types.hpp
kirana/new_scene/converters/: assimp_converter.cpp  assimp_converter.h  assimp_converter.hpp  converter.hpp  image_converter.hpp  stb_image_converter.cpp  stb_image_converter.hpp
kirana/new_scene/tests/: test_scene_load.cpp
kirana/scene/: CMakeLists.txt  camera.cpp  camera.hpp  image.cpp  image.hpp  image_manager.cpp  image_manager.hpp  image_types.hpp  light.cpp  light.hpp  material.cpp  material.hpp  material_properties.hpp  material_types.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  orthographic_camera.cpp  orthographic_camera.hpp  perspective_camera.cpp  perspective_camera.hpp  scene.cpp  scene.hpp  scene_editor.hpp  scene_importer.cpp  scene_importer.hpp  scene_manager.cpp  scene_manager.hpp  scene_test.cpp  scene_types.hpp  scene_utils.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  viewport_scene.cpp  viewport_scene.hpp
kirana/scene/primitives/: plane.cpp  plane.hpp
kirana/scene/tests/: test_scene_load.cpp
kirana/utils/: CMakeLists.txt  constants.h  event.hpp  file_system.cpp  file_system.hpp  id.hpp  id_manager.cpp  id_manager.hpp  input_constants.hpp  input_manager.hpp  logger.cpp  logger.hpp  time.hpp
kirana/viewport/: CMakeLists.txt  viewport.cpp  viewport.hpp  viewport_types.hpp
kirana/viewport/renderer/: device.hpp  instance.cpp  instance.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_utils.hpp
kirana/viewport/vulkan/: Swapchain.hpp  acceleration_structure.cpp  acceleration_structure.hpp  allocator.cpp  allocator.hpp  command_buffers.cpp  command_buffers.hpp  command_pool.cpp  command_pool.hpp  depth_buffer.cpp  depth_buffer.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  device.cpp  device.hpp  drawer.cpp  drawer.hpp  frame_graph.cpp  frame_graph.hpp  frame_graph_types.hpp  framebuffer.cpp  framebuffer.hpp  instance.cpp  instance.hpp  material_data.cpp  material_data.hpp  material_manager.cpp  material_manager.hpp  pipeline.cpp  pipeline.hpp  pipeline_layout.cpp  pipeline_layout.hpp  push_constant.hpp  raster_pipeline.cpp  raster_pipeline.hpp  raytrace_data.cpp  (+25 more)
kirana/viewport/vulkan/render_layers/: clear_render_layer.cpp  clear_render_layer.hpp  present_render_layer.cpp  present_render_layer.hpp  render_layer_base.cpp  render_layer_base.hpp  scene_render_layer.cpp  scene_render_layer.hpp
kirana/window/: CMakeLists.txt  api_window.cpp  api_window.hpp  input_constants.hpp  platform_window.cpp  platform_window.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
shaders/: CMakeLists.txt  Grid.frag  Grid.vert  MatCap.frag  MatCap.vert  Outline.frag  Outline.vert  Pathtrace.rchit  Pathtrace.rgen  Principled.frag  Principled.vert  Raytrace.rchit  Raytrace.rgen  Raytrace.rmiss  Wireframe.frag  Wireframe.vert  base_raytrace.glsl  base_vert.glsl  triangle.frag  triangle.vert
shaders/editor/: Grid.frag  Grid.vert  Outline.frag  Outline.vert  Principled.vert  base_raster.glsl  base_vert.glsl
shaders/raster/: BasicShaded.frag  BasicShaded.vert  Principled.frag  Principled.vert  Wireframe.frag  Wireframe.vert  base_raster.glsl  base_vert.glsl
shaders/raytrace/: BasicShaded.rchit  BasicShaded.rgen  BasicShaded.rmiss  Principled.rchit  Principled.rgen  Principled.rmiss  Raytrace.rchit  Raytrace.rgen  Raytrace.rmiss  Raytrace.shadow.rmiss  base_raytrace.glsl  raytrace_hitdata.glsl  raytrace_sample.glsl  raytrace_types.glsl  raytrace_utils.glsl
shaders/raytrace/common/: bxdf_basic.glsl  bxdf_principled.glsl  globals.glsl  intersection.glsl  pathtrace.glsl  random.glsl  sampling.glsl  tonemapping.glsl  utils.glsl
ui/: .gitignore  CMakeLists.txt  __init__.py  app.py  ui.py  viewport.py
ui/data/: main_window.ui
ui/utils/: path_utils.py
ui/window/: __init__.py  app_window.py
